--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body class= "cont5">
         <nav class ="top-nav">
-            <a href="site.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="bio.html">Bio</a>
             <a href="Evan Costa Resume 2022 .pdf">Resume</a>
             <a href="contact.html">Contact</a>
